--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "support": {
         "issues": "https://github.com/sebastianbergmann/phpunit/issues"
     },
+    "minimum-stability": "dev",
     "require": {
         "php": "^7.0",
         "ext-dom": "*",
@@ -30,7 +31,7 @@
         "phar-io/manifest": "^1.0.1",
         "phar-io/version": "^1.0",
         "phpspec/prophecy": "^1.7",
-        "phpunit/php-code-coverage": "^5.0",
+        "phpunit/php-code-coverage": "^6.0",
         "phpunit/php-file-iterator": "^1.4",
         "phpunit/php-text-template": "^1.2",
         "phpunit/php-timer": "^1.0.6",
