--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,8 @@
     "config": {
         "platform": {
             "php": "5.6.0"
-        }
+        },
+        "sort-packages": true
     },
     "suggest": {
         "phpunit/php-invoker": "~1.1",
