Move configuration of autoloader optimization from build.xml to composer.json

--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,7 @@
         "platform": {
             "php": "5.6.0"
         },
+        "optimize-autoloader": true,
         "sort-packages": true
     },
     "suggest": {
