Also test with 5.6snapshot, 7.0snapshot, and 7.1snapshot

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,12 @@ sudo: false
 
 php:
   - 5.6
+  - 5.6snapshot
   - 7.0
+  - 7.0snapshot
   - 7.1
-  - nightly
+  - 7.1snapshot
+  - master
 
 env:
   matrix:
