--- a/composer.json
+++ b/composer.json
@@ -27,23 +27,23 @@
         "ext-libxml": "*",
         "ext-mbstring": "*",
         "ext-xml": "*",
-        "myclabs/deep-copy": "^1.3",
+        "myclabs/deep-copy": "^1.6.1",
         "phar-io/manifest": "^1.0.1",
         "phar-io/version": "^1.0",
         "phpspec/prophecy": "^1.7",
         "phpunit/php-code-coverage": "^5.2",
-        "phpunit/php-file-iterator": "^1.4",
-        "phpunit/php-text-template": "^1.2",
-        "phpunit/php-timer": "^1.0.6",
-        "phpunit/phpunit-mock-objects": "^4.0",
-        "sebastian/comparator": "^2.0",
+        "phpunit/php-file-iterator": "^1.4.2",
+        "phpunit/php-text-template": "^1.2.1",
+        "phpunit/php-timer": "^1.0.9",
+        "phpunit/phpunit-mock-objects": "^4.0.2",
+        "sebastian/comparator": "^2.0.2",
         "sebastian/diff": "^2.0",
         "sebastian/environment": "^3.1",
         "sebastian/exporter": "^3.1",
-        "sebastian/global-state": "^1.1 || ^2.0",
+        "sebastian/global-state": "^2.0",
         "sebastian/object-enumerator": "^3.0.2",
         "sebastian/resource-operations": "^1.0",
-        "sebastian/version": "^2.0"
+        "sebastian/version": "^2.0.1"
     },
     "require-dev": {
         "ext-PDO": "*"
