--- a/src/Util/PHP/Template/TestCaseMethod.tpl.dist
+++ b/src/Util/PHP/Template/TestCaseMethod.tpl.dist
@@ -42,6 +42,10 @@ function __phpunit_run_isolated_test()
         );
     }
 
+    PHPUnit\Framework\Error\Deprecated::$enabled = {convertDeprecatedToExceptions};
+    PHPUnit\Framework\Error\Notice::$enabled = {convertNoticeToExceptions};
+    PHPUnit\Framework\Error\Warning::$enabled = {convertWarningToExceptions};
+
     $result->beStrictAboutTestsThatDoNotTestAnything({isStrictAboutTestsThatDoNotTestAnything});
     $result->beStrictAboutOutputDuringTests({isStrictAboutOutputDuringTests});
     $result->enforceTimeLimit({enforcesTimeLimit});
