--- a/src/Util/PHP/Template/PhptTestCase.tpl.dist
+++ b/src/Util/PHP/Template/PhptTestCase.tpl.dist
@@ -3,8 +3,11 @@ use SebastianBergmann\CodeCoverage\CodeCoverage;
 
 $composerAutoload = {composerAutoload};
 $phar             = {phar};
+$autoPrependFile  = {autoPrependFile};
 
 ob_start();
+
+$GLOBALS['__PHPUNIT_ISOLATION_BLACKLIST'][] = '{job}';
 
 if ($composerAutoload) {
     require_once $composerAutoload;
@@ -13,13 +16,31 @@ if ($composerAutoload) {
     require $phar;
 }
 
-$coverage =	new CodeCoverage();
+{globals}
+$coverage = null;
 
-register_shutdown_function(function() use ($coverage) {
-	file_put_contents('{coverageFile}', serialize($coverage->stop()));
+if (isset($GLOBALS['__PHPUNIT_BOOTSTRAP'])) {
+    require_once $GLOBALS['__PHPUNIT_BOOTSTRAP'];
+}
+
+if (class_exists('SebastianBergmann\CodeCoverage\CodeCoverage')) {
+    $coverage =	new CodeCoverage(null);
+    $coverage->start(__FILE__);
+}
+
+register_shutdown_function(function() use ($coverage, $autoPrependFile) {
+    $output = null;
+    if ($coverage) {
+        $output = $coverage->stop();
+    }
+    file_put_contents('{coverageFile}', serialize($output));
 });
 
-$coverage->start(__FILE__);
-
 ob_end_clean();
-?>{job}
+
+if ($autoPrependFile) {
+    require $autoPrependFile;
+    $includes = get_included_files();
+    $GLOBALS['__PHPUNIT_ISOLATION_BLACKLIST'][] = array_pop($includes);
+    unset($includes);
+}
