--- a/composer.json
+++ b/composer.json
@@ -40,11 +40,18 @@
         "sebastian/diff": "^2.0",
         "sebastian/environment": "^3.1",
         "sebastian/exporter": "^3.1",
+        "phpunit/phpunit-framework-constraint": "dev-master",
         "sebastian/global-state": "^2.0",
         "sebastian/object-enumerator": "^3.0.3",
         "sebastian/resource-operations": "^1.0",
         "sebastian/version": "^2.0.1"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/sebastianbergmann/phpunit-framework-constraint"
+        }
+    ],
     "require-dev": {
         "ext-PDO": "*"
     },
@@ -54,7 +61,7 @@
     },
     "config": {
         "platform": {
-            "php": "7.0.0"
+            "php": "7.1.0"
         },
         "optimize-autoloader": true,
         "sort-packages": true
