Update AppVeyor configuration

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,20 +7,16 @@ pull_requests:
 version: '{build}.{branch}'
 
 environment:
-  COMPOSER_ROOT_VERSION: '6.1.x-dev'
+  COMPOSER_ROOT_VERSION: '7.0-dev'
 
   matrix:
-    - PHP_VERSION: '7.0.16'
-      XDEBUG_VERSION: '2.5.1-7.0'
+    - PHP_VERSION: '7.2.0-Win32-VC15'
       DEPENDENCIES: '--prefer-lowest'
-    - PHP_VERSION: '7.0.16'
-      XDEBUG_VERSION: '2.5.1-7.0'
+    - PHP_VERSION: '7.2.0-Win32-VC15'
       DEPENDENCIES: ''
-    - PHP_VERSION: '7.1.2'
-      XDEBUG_VERSION: '2.5.1-7.1'
+    - PHP_VERSION: '7.1.12-Win32-VC14'
       DEPENDENCIES: '--prefer-lowest'
-    - PHP_VERSION: '7.1.2'
-      XDEBUG_VERSION: '2.5.1-7.1'
+    - PHP_VERSION: '7.1.12-Win32-VC14'
       DEPENDENCIES: ''
 
 matrix:
@@ -37,8 +33,8 @@ install:
   - IF NOT EXIST c:\php mkdir c:\php
   - IF NOT EXIST c:\php\%PHP_VERSION% mkdir c:\php\%PHP_VERSION%
   - cd c:\php\%PHP_VERSION%
-  - IF NOT EXIST php-installed.txt appveyor DownloadFile http://windows.php.net/downloads/releases/archives/php-%PHP_VERSION%-Win32-VC14-x86.zip
-  - IF NOT EXIST php-installed.txt 7z x php-%PHP_VERSION%-Win32-VC14-x86.zip -y >nul
+  - IF NOT EXIST php-installed.txt appveyor DownloadFile http://windows.php.net/downloads/releases/php-%PHP_VERSION%-x86.zip
+  - IF NOT EXIST php-installed.txt 7z x php-%PHP_VERSION%-x86.zip -y >nul
   - IF NOT EXIST php-installed.txt del /Q *.zip
   - IF NOT EXIST php-installed.txt copy /Y php.ini-development php.ini
   - IF NOT EXIST php-installed.txt echo max_execution_time=1200 >> php.ini
@@ -54,8 +50,6 @@ install:
   - IF NOT EXIST php-installed.txt echo assert.exception=On >> php.ini
   - IF NOT EXIST php-installed.txt appveyor DownloadFile https://getcomposer.org/composer.phar
   - IF NOT EXIST php-installed.txt echo @php %%~dp0composer.phar %%* > composer.bat
-  - IF NOT EXIST php-installed.txt appveyor DownloadFile https://xdebug.org/files/php_xdebug-%XDEBUG_VERSION%-vc14.dll -FileName c:\php\%PHP_VERSION%\ext\php_xdebug-%XDEBUG_VERSION%-vc14.dll
-  - IF NOT EXIST php-installed.txt echo zend_extension=php_xdebug-%XDEBUG_VERSION%-vc14.dll >> php.ini
   - IF NOT EXIST php-installed.txt type nul >> php-installed.txt
   - cd c:\phpunit
   - composer update --no-interaction --no-ansi --no-progress --no-suggest --optimize-autoloader --prefer-stable %DEPENDENCIES%
