--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -85,20 +85,22 @@ return PhpCsFixer\Config::create()
             'normalize_index_brace' => true,
             'object_operator_without_whitespace' => true,
             'ordered_class_elements' => [
-                'use_trait',
-                'constant_public',
-                'constant_protected',
-                'constant_private',
-                'property_public',
-                'property_protected',
-                'property_private',
-                'construct',
-                'destruct',
-                'magic',
-                'phpunit',
-                'method_public',
-                'method_protected',
-                'method_private'
+                'order' => [
+                    'use_trait',
+                    'constant_public',
+                    'constant_protected',
+                    'constant_private',
+                    'property_public',
+                    'property_protected',
+                    'property_private',
+                    'construct',
+                    'destruct',
+                    'magic',
+                    'phpunit',
+                    'method_public',
+                    'method_protected',
+                    'method_private',
+                ],
             ],
             'ordered_imports' => true,
             'phpdoc_add_missing_param_annotation' => true,
