PHP CS Fixer - update usage of deprecated rule

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -29,6 +29,7 @@ return PhpCsFixer\Config::create()
             ],
             'braces' => true,
             'cast_spaces' => true,
+            'class_attributes_separation' => ['elements' => ['method']],
             'compact_nullable_typehint' => true,
             'concat_space' => ['spacing' => 'one'],
             'declare_equal_normalize' => ['space' => 'none'],
@@ -46,7 +47,6 @@ return PhpCsFixer\Config::create()
             'lowercase_keywords' => true,
             'magic_constant_casing' => true,
             'method_argument_space' => ['ensure_fully_multiline' => true],
-            'method_separation' => true,
             'modernize_types_casting' => true,
             'native_function_casing' => true,
             'native_function_invocation' => true,
