--- a/.travis.yml
+++ b/.travis.yml
@@ -45,3 +45,11 @@ after_success:
 notifications:
   email: false
 
+jobs:
+  include:
+    - stage: Code Quality
+      env: STATIC_ANALYSIS
+      install: travis_retry composer update --prefer-dist --prefer-stable
+      before_script:
+        - travis_retry composer require --dev --prefer-dist --prefer-stable phpstan/phpstan:^0.9
+      script: vendor/bin/phpstan analyse -l 1 src -c phpstan.neon
