--- a/composer.json
+++ b/composer.json
@@ -74,7 +74,9 @@
         ],
         "files": [
             "src/Framework/Assert/Functions.php",
-            "tests/_files/CoveredFunction.php"
+            "tests/_files/CoverageNamespacedFunctionTest.php",
+            "tests/_files/CoveredFunction.php",
+            "tests/_files/NamespaceCoveredFunction.php"
         ]
     },
     "extra": {
