Using the level 0 for the phpstan checks

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,20 +1,8 @@
 parameters:
     ignoreErrors:
-        - '#Constant PHPUNIT_COMPOSER_INSTALL not found.#'
-        - '#Constant __PHPUNIT_PHAR__ not found.#'
-        - '#Constant __PHPUNIT_PHAR_ROOT__ not found.#'
-        - '#Variable \$e might not be defined.#'
-        - '#Variable \$method might not be defined.#'
-        - '#Variable \$_timeout might not be defined.#'
+        - '#Function xdebug_start_function_monitor not found.#'
+        - '#Function xdebug_get_monitored_functions not found.#'
+        - '#Function xdebug_stop_function_monitor not found.#'
         - '#Class SebastianBergmann\\Invoker\\Invoker not found.#'
         - '#Instantiated class SebastianBergmann\\Invoker\\Invoker not found.#'
         - '#Caught class SebastianBergmann\\Invoker\\TimeoutException not found.#'
-        - '#Variable \$filename might not be defined.#'
-        - '#Variable \$hasMetRequirements might not be defined.#'
-        - '#Variable \$testResult might not be defined.#'
-        - '#Variable \$color might not be defined.#'
-        - '#Variable \$stdout might not be defined.#'
-        - '#Variable \$stderr might not be defined.#'
-        - '#Variable \$className might not be defined.#'
-        - '#Variable \$testMethod might not be defined.#'
-        - '#Variable \$codeCoverage in isset\(\) always exists and is not nullable.#'
