--- a/phpstan-tests.neon
+++ b/phpstan-tests.neon
@@ -4,6 +4,15 @@ parameters:
         - '#Issue244Exception::__construct\(\) does not call parent constructor from Exception.#'
         - '#Issue244ExceptionIntCode::__construct\(\) does not call parent constructor from Exception.#'
 
+        # these constants are defined in PHPUnit configuration XML, so they can't be detected in PHPStan
+        - '#Constant PHPUNIT_1330 not found.#'
+        - '#Constant FOO not found.#'
+        - '#Constant BAR not found.#'
+
+        # global constants does not work properly in PHPStan yet https://github.com/phpstan/phpstan/issues/768
+        - '#Constant TEST_FILES_PATH not found.#'
+        - '#Constant GITHUB_ISSUE not found.#'
+
     excludes_analyse:
         # duplicated classname OneTest
         - tests/_files/phpunit-example-extension/tests/OneTest.php
