--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ notifications:
 
 jobs:
   include:
-    - stage: Code Quality
+    - stage: Quality
       php: 7.2
       env: PHPStan
       install: travis_retry composer update --prefer-dist --prefer-stable
@@ -60,3 +60,11 @@ jobs:
       script:
         - vendor/bin/phpstan analyse --level=0 -c phpstan.neon src
         - vendor/bin/phpstan analyse --level=0 -c phpstan-tests.neon tests
+    - stage: Style
+      php: 7.2
+      env: php-cs-fixer
+      install:
+        - wget http://cs.sensiolabs.org/download/php-cs-fixer-v2.phar -O php-cs-fixer
+        - phpenv config-rm xdebug.ini
+      script:
+        - php php-cs-fixer --diff --dry-run -v fix
