--- a/.travis.yml
+++ b/.travis.yml
@@ -58,7 +58,7 @@ jobs:
       before_script:
         - travis_retry composer require --dev --prefer-dist --prefer-stable friendsofphp/php-cs-fixer:^2.10 phpstan/phpstan:^0.9
       script:
-        - vendor/bin/php-cs-fixer --diff --dry-run -v fix
+        - PHP_CS_FIXER_FUTURE_MODE=1 vendor/bin/php-cs-fixer --diff --dry-run -v fix
         - vendor/bin/phpstan analyse --level=0 -c phpstan.neon src
         - vendor/bin/phpstan analyse --level=1 -c phpstan-tests.neon tests
     - stage: Style
