--- a/.travis.yml
+++ b/.travis.yml
@@ -58,7 +58,7 @@ jobs:
         - travis_retry composer require --dev --no-update friendsofphp/php-cs-fixer:^2.10 phpstan/phpstan:^0.9
       install: travis_retry composer update --prefer-dist --prefer-stable
       script:
-        - PHP_CS_FIXER_FUTURE_MODE=1 vendor/bin/php-cs-fixer --diff --dry-run -v fix
+        - vendor/bin/php-cs-fixer fix --dry-run -v --show-progress=dots --diff-format=udiff
         - vendor/bin/phpstan analyse --level=0 -c phpstan.neon src
         - vendor/bin/phpstan analyse --level=1 -c phpstan-tests.neon tests
     - stage: Style
