--- a/.travis.yml
+++ b/.travis.yml
@@ -51,20 +51,19 @@ notifications:
 
 jobs:
   include:
-    - stage: Quality
+    - stage: Static Code Analysis
       php: 7.2
       env: PHPStan
       before_install:
-        - travis_retry composer require --dev --no-update friendsofphp/php-cs-fixer:^2.10 phpstan/phpstan:^0.9
+        - travis_retry composer require --dev --no-update phpstan/phpstan:^0.9
       install: travis_retry composer update --prefer-dist --prefer-stable
       script:
-        - vendor/bin/php-cs-fixer fix --dry-run -v --show-progress=dots --diff-format=udiff
         - vendor/bin/phpstan analyse --level=0 -c phpstan.neon src
         - vendor/bin/phpstan analyse --level=1 -c phpstan-tests.neon tests
-    - stage: Style
+    - stage: Static Code Analysis
       php: 7.2
       env: php-cs-fixer
       install:
         - phpenv config-rm xdebug.ini
       script:
-        - ./build/tools/php-cs-fixer --diff --dry-run -v fix
+        - ./build/tools/php-cs-fixer fix --dry-run -v --show-progress=dots --diff-format=udiff
