Complete configuration for ordered_class_elements fixer
See https://github.com/FriendsOfPHP/PHP-CS-Fixer/issues/3642#issuecomment-377245707

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -90,9 +90,13 @@ return PhpCsFixer\Config::create()
                     'constant_public',
                     'constant_protected',
                     'constant_private',
+                    'property_public_static',
+                    'property_protected_static',
+                    'property_private_static',
                     'property_public',
                     'property_protected',
                     'property_private',
+                    'method_public_static',
                     'construct',
                     'destruct',
                     'magic',
@@ -100,6 +104,8 @@ return PhpCsFixer\Config::create()
                     'method_public',
                     'method_protected',
                     'method_private',
+                    'method_protected_static',
+                    'method_private_static',
                 ],
             ],
             'ordered_imports' => true,
