Enhancement: Add blank lines before more statements

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -22,9 +22,21 @@ return PhpCsFixer\Config::create()
                 'statements' => [
                     'break',
                     'continue',
+                    'declare',
+                    'do',
+                    'for',
+                    'foreach',
+                    'if',
+                    'include',
+                    'include_once',
+                    'require',
+                    'require_once',
                     'return',
+                    'switch',
                     'throw',
                     'try',
+                    'while',
+                    'yield',
                 ],
             ],
             'braces' => true,
