--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -166,4 +166,5 @@ return PhpCsFixer\Config::create()
         ->in(__DIR__ . '/src')
         ->in(__DIR__ . '/tests')
         ->name('*.php')
+        ->notName('*.phpt')
     );
