--- a/phpstan-tests.neon
+++ b/phpstan-tests.neon
@@ -13,6 +13,9 @@ parameters:
         - '#Constant TEST_FILES_PATH not found.#'
         - '#Constant GITHUB_ISSUE not found.#'
 
+        # intentionally non existent function in tests/Regression/GitHub/3107/Issue3107Test.php
+        - '#Function does_not_exist not found#'
+
     excludes_analyse:
         # duplicated classname OneTest
         - tests/_files/phpunit-example-extension/tests/OneTest.php
