--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "ext-libxml": "*",
         "ext-mbstring": "*",
         "ext-xml": "*",
+        "doctrine/instantiator": "^1.0.5",
         "myclabs/deep-copy": "^1.6.1",
         "phar-io/manifest": "^1.0.1",
         "phar-io/version": "^1.0",
@@ -35,7 +36,6 @@
         "phpunit/php-file-iterator": "^1.4.3",
         "phpunit/php-text-template": "^1.2.1",
         "phpunit/php-timer": "^2.0",
-        "phpunit/phpunit-mock-objects": "^6.1.1",
         "sebastian/comparator": "^3.0",
         "sebastian/diff": "^3.0",
         "sebastian/environment": "^3.1",
@@ -57,6 +57,7 @@
     },
     "suggest": {
         "phpunit/php-invoker": "^2.0",
+        "ext-soap": "*",
         "ext-xdebug": "*"
     },
     "bin": [
