--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
         "sebastian/global-state": "^2.0",
         "sebastian/object-enumerator": "^3.0.3",
         "sebastian/resource-operations": "^1.0",
-        "sebastian/version": "^2.0.1"
+        "sebastian/version": "^2.0.1",
+        "symfony/process": "~3.4|~4.0"
     },
     "require-dev": {
         "ext-PDO": "*"
