Ensure that phpunit/phpunit-mock-objects cannot be installed (see #3103)

--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,9 @@
     "require-dev": {
         "ext-PDO": "*"
     },
+    "conflict": {
+        "phpunit/phpunit-mock-objects": "*"
+    },
     "config": {
         "platform": {
             "php": "7.1.0"
