--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,8 +33,8 @@ install:
   - IF NOT EXIST c:\php mkdir c:\php
   - IF NOT EXIST c:\php\%PHP_VERSION% mkdir c:\php\%PHP_VERSION%
   - cd c:\php\%PHP_VERSION%
-  - IF NOT EXIST php-installed.txt appveyor DownloadFile https://windows.php.net/downloads/releases/archives/php-%PHP_VERSION%-x86.zip
-  - IF NOT EXIST php-installed.txt 7z x php-%PHP_VERSION%-x86.zip -y >nul
+  - IF NOT EXIST php-installed.txt appveyor-retry curl -fsS -o php.zip https://windows.php.net/downloads/releases/archives/php-%PHP_VERSION%-x86.zip
+  - IF NOT EXIST php-installed.txt 7z x php.zip -y
   - IF NOT EXIST php-installed.txt del /Q *.zip
   - IF NOT EXIST php-installed.txt copy /Y php.ini-development php.ini
   - IF NOT EXIST php-installed.txt echo max_execution_time=1200 >> php.ini
