Revert "phpunit/php-file-iterator 2.0.0 has been tagged"
This reverts commit 0d37eca9f82f8f59f47b8f35c01f033ac4baf764.

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "support": {
         "issues": "https://github.com/sebastianbergmann/phpunit/issues"
     },
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
         "php": "^7.1",
