--- a/src/Util/PHP/Template/TestCaseMethod.tpl.dist
+++ b/src/Util/PHP/Template/TestCaseMethod.tpl.dist
@@ -48,6 +48,10 @@ function __phpunit_run_isolated_test()
     $result->beStrictAboutTodoAnnotatedTests({isStrictAboutTodoAnnotatedTests});
     $result->beStrictAboutResourceUsageDuringSmallTests({isStrictAboutResourceUsageDuringSmallTests});
 
+    // If testcase open stdout and close it, the output will be lost.
+    // So we open it manually.
+    $stdout = fopen('php://stdout', 'w');
+
     /** @var TestCase $test */
     $test = new {className}('{methodName}', unserialize('{data}'), '{dataName}');
     $test->setDependencyInput(unserialize('{dependencyInput}'));
@@ -61,8 +65,8 @@ function __phpunit_run_isolated_test()
     }
 
     @rewind(STDOUT); /* @ as not every STDOUT target stream is rewindable */
-    if ($stdout = stream_get_contents(STDOUT)) {
-        $output = $stdout . $output;
+    if ($testcaseOutput = stream_get_contents(STDOUT)) {
+        $output = $testcaseOutput . $output;
         $streamMetaData = stream_get_meta_data(STDOUT);
         if (!empty($streamMetaData['stream_type']) && 'STDIO' === $streamMetaData['stream_type']) {
             @ftruncate(STDOUT, 0);
@@ -78,6 +82,7 @@ function __phpunit_run_isolated_test()
         'output'        => $output
       )
     );
+    fclose($stdout);
 }
 
 $configurationFilePath = '{configurationFilePath}';
