--- a/build.xml
+++ b/build.xml
@@ -51,6 +51,11 @@
         </exec>
 
         <exec executable="${basedir}/build/tools/composer" taskname="composer">
+            <arg value="require"/>
+            <arg value="humbug/php-scoper:^0.8"/>
+        </exec>
+
+        <exec executable="${basedir}/build/tools/composer" taskname="composer">
             <arg value="update"/>
             <arg value="--no-interaction"/>
             <arg value="--no-progress"/>
@@ -331,7 +336,7 @@
             <arg value="${type}"/>
         </exec>
 
-        <exec executable="${basedir}/build/tools/php-scoper.phar" taskname="php-scoper">
+        <exec executable="${basedir}/vendor/bin/php-scoper" taskname="php-scoper">
             <arg value="add-prefix" />
             <arg value="--no-ansi" />
             <arg value="--config" />
