--- a/phpstan-tests.neon
+++ b/phpstan-tests.neon
@@ -41,6 +41,6 @@ parameters:
         - '#Result of method ClassWithAllPossibleReturnTypes::methodWithVoidReturnTypeDeclaration\(\) \(void\) is used#'
 
     excludes_analyse:
-        # duplicated classname OneTest
         - tests/_files/phpunit-example-extension/tests/OneTest.php
         - tests/Regression/Trac/783/OneTest.php
+        - tests/_files/3194.php
