--- a/phpstan-tests.neon
+++ b/phpstan-tests.neon
@@ -44,3 +44,4 @@ parameters:
         - tests/_files/phpunit-example-extension/tests/OneTest.php
         - tests/Regression/Trac/783/OneTest.php
         - tests/_files/3194.php
+        - tests/_files/RouterTest.php
