--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ before_script:
 
 script:
   - ./phpunit --coverage-clover=coverage.xml
-  - phpenv config-rm xdebug.ini
+  - phpenv config-rm xdebug.ini; true
   - phpdbg -qrr ./phpunit --coverage-text
   - ./phpunit --configuration ./build/travis-ci-fail.xml > /dev/null; if [ $? -eq 0 ]; then echo "SHOULD FAIL"; false; else echo "fail checked"; fi;
   - xmllint --noout --schema phpunit.xsd phpunit.xml
