Enhancement: Enable blank_line_after_opening_tag fixer

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -22,6 +22,7 @@ return PhpCsFixer\Config::create()
                 ],
             ],
             'blank_line_after_namespace' => true,
+            'blank_line_after_opening_tag' => true,
             'blank_line_before_statement' => [
                 'statements' => [
                     'break',
