--- a/build.xml
+++ b/build.xml
@@ -51,11 +51,6 @@
         </exec>
 
         <exec executable="${basedir}/build/tools/composer" taskname="composer">
-            <arg value="require"/>
-            <arg value="humbug/php-scoper:^0.8"/>
-        </exec>
-
-        <exec executable="${basedir}/build/tools/composer" taskname="composer">
             <arg value="update"/>
             <arg value="--no-interaction"/>
             <arg value="--no-progress"/>
@@ -336,7 +331,7 @@
             <arg value="${type}"/>
         </exec>
 
-        <exec executable="${basedir}/vendor/bin/php-scoper" taskname="php-scoper">
+        <exec executable="${basedir}/build/tools/php-scoper" taskname="php-scoper">
             <arg value="add-prefix" />
             <arg value="--no-ansi" />
             <arg value="--config" />
@@ -384,7 +379,7 @@
         <chmod file="${basedir}/build/phpunit-${_version}.phar" perm="ugo+rx"/>
 
         <delete dir="${basedir}/build/phar"/>
-        <delete dir="${basedir}/build/phar-prefixed"/>
+
         <delete file="${basedir}/build/binary-phar-autoload.php"/>
     </target>
 
