--- a/build.xml
+++ b/build.xml
@@ -10,6 +10,7 @@
         <delete dir="${basedir}/build/documentation"/>
         <delete dir="${basedir}/build/logfiles"/>
         <delete dir="${basedir}/build/phar"/>
+        <delete dir="${basedir}/build/phar-scoped"/>
         <delete>
             <fileset dir="${basedir}/build">
                 <include name="**/phpunit*.phar"/>
@@ -341,7 +342,21 @@
             <arg value="${type}"/>
         </exec>
 
-        <exec executable="${basedir}/tools/phpab" taskname="phpab" failonerror="true">
+        <exec executable="${basedir}/build/tools/php-scoper" taskname="php-scoper">
+            <arg value="add-prefix" />
+            <arg value="--no-ansi" />
+            <arg value="--config" />
+            <arg path="${basedir}/build/scoper.inc.php" />
+            <arg value="--no-interaction" />
+            <arg value="--stop-on-failure" />
+            <arg value="--output-dir" />
+            <arg path="${basedir}/build/phar-scoped" />
+            <arg value="--prefix" />
+            <arg value="PHPUnit" />
+            <arg path="${basedir}/build/phar" />
+        </exec>
+
+        <exec executable="${basedir}/build/tools/phpab" taskname="phpab" failonerror="true">
             <arg value="--all" />
             <arg value="--static" />
             <arg value="--once" />
@@ -369,12 +384,13 @@
             <arg path="${basedir}/build/phpunit-${_version}.phar" />
             <arg value="--template" />
             <arg path="${basedir}/build/binary-phar-autoload.php" />
-            <arg path="${basedir}/build/phar" />
+            <arg path="${basedir}/build/phar-scoped" />
         </exec>
 
         <chmod file="${basedir}/build/phpunit-${_version}.phar" perm="ugo+rx"/>
 
-        <delete dir="${basedir}/build/phar"/>
+        <!--<delete dir="${basedir}/build/phar"/>-->
+        <!--<delete dir="${basedir}/build/phar-scoped"/>-->
         <delete file="${basedir}/build/binary-phar-autoload.php"/>
     </target>
 
