--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -184,7 +184,7 @@ return PhpCsFixer\Config::create()
                     'property',
                 ],
             ],
-            //'void_return' => true,
+            'void_return' => true,
             'whitespace_after_comma_in_array' => true,
         ]
     )
