--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "issues": "https://github.com/sebastianbergmann/phpunit/issues"
     },
     "prefer-stable": true,
+    "minimum-stability": "dev",
     "require": {
         "php": "^7.2",
         "ext-dom": "*",
@@ -40,7 +41,7 @@
         "sebastian/diff": "^3.0",
         "sebastian/environment": "^3.1 || ^4.0",
         "sebastian/exporter": "^3.1",
-        "sebastian/global-state": "^2.0",
+        "sebastian/global-state": "^3.0",
         "sebastian/object-enumerator": "^3.0.3",
         "sebastian/resource-operations": "^2.0",
         "sebastian/version": "^2.0.1"
