--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 /build/binary-phar-autoload.php
 /cache.properties
 /composer.lock
+/splitedXML
 /tests/end-to-end/*.diff
 /tests/end-to-end/*.exp
 /tests/end-to-end/*.log
