Enforce strict interpretation of scalar type declarations (finally)

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -51,6 +51,7 @@ return PhpCsFixer\Config::create()
             'compact_nullable_typehint' => true,
             'concat_space' => ['spacing' => 'one'],
             'declare_equal_normalize' => ['space' => 'none'],
+            'declare_strict_types' => true,
             'dir_constant' => true,
             'elseif' => true,
             'encoding' => true,
