--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         "phpunit/php-timer": "^1.0.9",
         "phpunit/phpunit-mock-objects": "^5.0.9",
         "sebastian/comparator": "^2.1",
-        "sebastian/diff": "^2.0",
+        "sebastian/diff": "^2.0|^3.0",
         "sebastian/environment": "^3.1",
         "sebastian/exporter": "^3.1",
         "sebastian/global-state": "^2.0",
