Test against PHP 7.4

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,12 @@ addons:
 php:
   - 7.2
   - 7.3
+  - 7.4
   - master
 
 matrix:
   allow_failures:
+    - php: 7.4
     - php: master
   fast_finish: true
 
