Come to think of it, $errcontext is deprecated in PHP 7.2 and one should no rely on it. We do no rely on it so we can safely remove it.

--- a/src/Util/PHP/Template/TestCaseMethod.tpl.dist
+++ b/src/Util/PHP/Template/TestCaseMethod.tpl.dist
@@ -90,7 +90,7 @@ if ('' !== $configurationFilePath) {
     unset($configuration);
 }
 
-function __phpunit_error_handler($errno, $errstr, $errfile, $errline{errcontext})
+function __phpunit_error_handler($errno, $errstr, $errfile, $errline)
 {
    return true;
 }
