--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -196,4 +196,5 @@ return PhpCsFixer\Config::create()
         ->in(__DIR__ . '/src')
         ->in(__DIR__ . '/tests')
         ->notName('*.phpt')
+        ->notName('ClassWithAllPossibleReturnTypes.php')
     );
